# Finance-Analytics

./: LICENSE  README.md  pyproject.toml
notebooks/: data_analytics.ipynb
